open java.util to unnamed module for testing
Illegal access permission is no longer available with JDK 17.
To allow System Lambda to mock the environment, we open the java.util
package explicitly for testing.